--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,22 +1,47 @@
 <div class="h-screen flex justify-center">
-    <form (ngSubmit)="submit()" class="p-4 rounded-lg border m-auto w-1/3">
+    <form (ngSubmit)="submit()" #myForm="ngForm" class="p-4 rounded-lg border m-auto w-1/3">
         <h1 class="text-center text-xl">Login</h1>
         <div class="my-5 w-full">
             <label for="email">Email</label>
            
-            <input type="email" [(ngModel)]="form.email" name="email" id="email" class="p-2 rounded w-full border" placeholder="Email">
+            <input required #email="ngModel" type="email" [(ngModel)]="form.email" name="email" id="email" class="p-2 rounded w-full border" placeholder="Email">
         </div>
+        <div  *ngIf="email.invalid && (email.touched || email.dirty)" class="text-red-500">
+            Email must be valid
+
+        </div>
+
+       
 
         <div class="my-5 w-full">
 
             <label for="password">Password</label>
-            <input type="password" [(ngModel)]="form.password" name="password" id="password" class="p-2 rounded w-full border" placeholder="Password">
+            <input required #password="ngModel" type="password" [(ngModel)]="form.password" name="password" id="password" class="p-2 rounded w-full border" placeholder="Password">
         </div>
+        <div *ngIf="password.invalid && (password.touched || password.dirty)" class="text-red-500">
+            Password must be valid
+
+        </div>
+       
+        
+        
+        <p>{{error_message()}}</p>
 
         <div class="my-5 w-full">
             
-            <input type="submit" value="Login" class="w-full py-3 rounded bg-purple-800 text-white hover:bg-purple-900 pointer"  >
-        </div>
+            <button type="submit" [disabled]="myForm.form.invalid" value="Login" class="w-full py-3 rounded bg-purple-800 text-white hover:bg-purple-900 pointer"  >
+        <ng-container *ngIf="isLoading()">
+            Loading...
+
+        </ng-container>
+        <ng-container *ngIf="!isLoading()">
+            Login
+            
+        </ng-container>
+        
+            </button>
+        
+            </div>
     </form>
 
 </div>
