--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,37 +1,51 @@
 <div class="h-screen flex justify-center">
-    <form (ngSubmit)="register()" class="p-5 rounded-lg border m-auto w-1/3">
+    <form (ngSubmit)="register()" #myForm="ngForm" class="p-5 rounded-lg border m-auto w-1/3">
         <h1 class="text-center text-xl">Register</h1>
-        <div class="my-5 w-full">
-            <label for="email">Username</label>
-            <input required #username="ngModel" type="text" [(ngModel)]="form.username" name="username" id="username" class="p-2 rounded w-full border" placeholder="Username">
-        </div>
-        <div  [hidden]="username.valid" class="text-red-500">
-            Username must be valid
-
-        </div>
+       
         <div class="my-5 w-full">
             <label for="email">Email</label>
            
             <input required #email="ngModel" type="email" [(ngModel)]="form.email" name="email" id="email" class="p-2 rounded w-full border" placeholder="Email">
         </div>
-        <div  [hidden]="email.valid" class="text-red-500">
-            Username must be valid
+        <div  *ngIf="email.invalid && (email.touched || email.dirty)" class="text-red-500">
+            Email must be valid
 
         </div>
+
+       
 
         <div class="my-5 w-full">
 
             <label for="password">Password</label>
             <input required #password="ngModel" type="password" [(ngModel)]="form.password" name="password" id="password" class="p-2 rounded w-full border" placeholder="Password">
         </div>
-        <div  [hidden]="password.valid" class="text-red-500">
-            Username must be valid
+        <div *ngIf="password.invalid && (password.touched || password.dirty)" class="text-red-500">
+            Password must be valid
 
         </div>
         <div class="my-5 w-full">
-            
-            <input type="submit" value="Register" class="w-full py-3 rounded bg-purple-800 text-white hover:bg-purple-900 pointer"  >
+            <label for="email">Confirm password</label>
+            <input required #confirm_password="ngModel" type="password" [(ngModel)]="form.confirm_password" name="username" id="username" class="p-2 rounded w-full border" placeholder="Username">
         </div>
+        <div  *ngIf="confirm_password.invalid && (confirm_password.touched || confirm_password.dirty)" class="text-red-500">
+            Confirm password must be valid
+
+        </div>
+        <p>{{error_message()}}</p>
+        <div class="my-5 w-full">
+            
+            <button type="submit" [disabled]="myForm.form.invalid" value="Login" class="w-full py-3 rounded bg-purple-800 text-white hover:bg-purple-900 pointer"  >
+                <ng-container *ngIf="isLoading()">
+                    Loading...
+        
+                </ng-container>
+                <ng-container *ngIf="!isLoading()">
+                    Register
+                    
+                </ng-container>
+                
+                    </button>
+                    </div>
     </form>
 
 </div>
